Blankstate on related list  #20

--- a/templates/accounts/list.html
+++ b/templates/accounts/list.html
@@ -189,7 +189,7 @@
                                   
                 </div>
               </div>
-              <div ng-show="blankState" class="span12 responsive" data-tablet="span6" data-desktop="span12">
+              <div ng-show="blankStateaccount" class="span12 responsive" data-tablet="span6" data-desktop="span12">
                 <div class="dashboard-stat cards">
                   
                   
