--- a/templates/accounts/show.html
+++ b/templates/accounts/show.html
@@ -316,10 +316,25 @@
                                   {{ _('View more')}} <i class="m-icon-swapright m-icon-white"></i>
                                   </a>                 
                                 </div>
-                              </div><br>
+                              </div>
+                                <div ng-show="blankStatecontact" class="span12 responsive" data-tablet="span6" data-desktop="span12">
+                <div class="dashboard-stat cards">
+                  
+                  
+                  <div class="blank_slate_arrow"></div>
+                  <div class="blank_slate_body">
+                      <img src="/static/img/contacts_blank.png">
+                      <p class="lead">Each contact gets a page in i/oGrow. You and your co-workers can add notes from calls,conversations, meetings, or any other historic information about this person.</p>
+                  </div>
+               
+                                  
+                </div>
+              </div>
+                              <br>
                               
                               
                               </div>
+
                               
                             </div>
                             <div class="row-fluid">
@@ -413,6 +428,19 @@
                                   </a>                 
                                 </div>
                               </div>
+                              <div ng-show="blankStateopportunity" class="span12 responsive" data-tablet="span6" data-desktop="span12">
+                <div class="dashboard-stat cards">
+                  
+                  
+                  <div class="blank_slate_arrow"></div>
+                  <div class="blank_slate_body">
+                      <img src="/static/img/opportunities_blank.png">
+                      <p class="lead">Know which proposals/bids are pending, which you’ve won, and which you’ve lost. Enter notes about the opportunities, attach proposals or contracts to the opportunities, and keep a log of any changes.</p>
+                  </div>
+               
+                                  
+                </div>
+              </div>
                               </div>
                               
                             </div>
@@ -512,6 +540,19 @@
                                   </a>                 
                                 </div>
                               </div>
+                              <div ng-show="blankStatecase" class="span12 responsive" data-tablet="span6" data-desktop="span12">
+                          <div class="dashboard-stat cards">
+                  
+                  
+                                <div class="blank_slate_arrow"></div>
+                              <div class="blank_slate_body">
+                                  <img src="/static/img/cases_blank.png">
+                                <p class="lead">The main goal of cases is to assist collaboration and focus of teams on delivering amazing customer experience.</p>
+                                   </div>
+               
+                                  
+                          </div>
+              </div>
 
                               </div>
                             </div>
