--- a/templates/live/feedbacks/feedbacks_list.html
+++ b/templates/live/feedbacks/feedbacks_list.html
@@ -77,7 +77,7 @@
                                   
                 </div>
               </div>
-              <div ng-show="blankState" class="span12 responsive" data-tablet="span6" data-desktop="span12">
+              <div ng-show="blankStatefeedback" class="span12 responsive" data-tablet="span6" data-desktop="span12">
                 <div class="dashboard-stat cards">
                   
                   
