--- a/templates/live/shows/show.html
+++ b/templates/live/shows/show.html
@@ -338,63 +338,13 @@
                          <div class="btn-group relbutton">
             
                                 <button  ng-click="showModal()" id="sample_editable_1_new" class="btn red">
-                               {{_("Add a person to this account")}}<i class="icon-plus"></i>
+                               {{_("Add feddbacks")}}<i class="icon-plus"></i>
                                 </button>
                           </div>
                             <div class="inner-cards-container">
                             
-                              <div  class="span3 responsive" data-tablet="span6" data-desktop="span3">
-                                <div class="dashboard-stat cards">
-                                  
-                                  <div class="details">
-                                    <a href="/#/accounts/show/<%= account.id %>"><h3 class="relatedcardTitle">
-                                     Ben Belfodhil
-                                    </h3></a>
-                                    <div class="desc">                           
-                                    <span class="contact-title">CEO</span>  
-                                    
-                                    </div>
-                                  </div>
-                                  <a class="more" href="/#/accounts/show/<%= account.id %>">
-                                  View more <i class="m-icon-swapright m-icon-white"></i>
-                                  </a>                 
-                                </div>
-                              </div>
-                              <div  class="span3 responsive" data-tablet="span6" data-desktop="span3">
-                                <div class="dashboard-stat cards">
-                                  
-                                  <div class="details">
-                                    <a href="/#/accounts/show/<%= account.id %>"><h3 class="relatedcardTitle">
-                                     Hakim Karriche
-                                    </h3></a>
-                                    <div class="desc">                           
-                                    <span class="contact-title">CTO</span>  
-                                    
-                                    </div>
-                                  </div>
-                                  <a class="more" href="/#/accounts/show/<%= account.id %>">
-                                  View more <i class="m-icon-swapright m-icon-white"></i>
-                                  </a>                 
-                                </div>
-                              </div>
-                              <div  class="span3 responsive" data-tablet="span6" data-desktop="span3">
-                                <div class="dashboard-stat cards">
-                                  
-                                  <div class="details">
-                                    <a href="/#/accounts/show/<%= account.id %>"><h3 class="relatedcardTitle">
-                                     Eric Joe
-                                    </h3></a>
-                                    <div class="desc">                           
-                                    <span class="contact-title">CCO</span>  
-                                    
-                                    </div>
-                                  </div>
-                                  <a class="more" href="/#/accounts/show/<%= account.id %>">
-                                  View more <i class="m-icon-swapright m-icon-white"></i>
-                                  </a>                 
-                                </div>
-                              </div>
-                              <div  class="span3 responsive" data-tablet="span6" data-desktop="span3">
+                                                          
+                            <div  class="span3 responsive" data-tablet="span6" data-desktop="span3">
                                 <div class="dashboard-stat cards">
                                   
                                   <div class="details">
@@ -412,6 +362,7 @@
                                   </a>                 
                                 </div>
                               </div>
+
                               </div>
                             </div>
                       </div>
