--- a/templates/cases/case_list.html
+++ b/templates/cases/case_list.html
@@ -247,7 +247,7 @@
                                  
                 </div>
               </div>
-               <div ng-show="blankState" class="span12 responsive" data-tablet="span6" data-desktop="span12">
+               <div ng-show="blankStatecase" class="span12 responsive" data-tablet="span6" data-desktop="span12">
                 <div class="dashboard-stat cards">
                   
                   
