--- a/templates/contacts/list.html
+++ b/templates/contacts/list.html
@@ -198,7 +198,7 @@
                                   
                 </div>
               </div>
-               <div ng-show="blankState" class="span12 responsive" data-tablet="span6" data-desktop="span12">
+               <div ng-show="blankStatecontact" class="span12 responsive" data-tablet="span6" data-desktop="span12">
                 <div class="dashboard-stat cards">
                   
                   
