--- a/templates/live/shows/list_show.html
+++ b/templates/live/shows/list_show.html
@@ -117,7 +117,7 @@
                                   
                 </div>
               </div>
-              <div ng-show="blankState" class="span12 responsive" data-tablet="span6" data-desktop="span12">
+              <div ng-show="blankStateshow" class="span12 responsive" data-tablet="span6" data-desktop="span12">
                 <div class="dashboard-stat cards">
                   
                   
