--- a/templates/opportunities/list.html
+++ b/templates/opportunities/list.html
@@ -216,7 +216,7 @@
                                   
                 </div>
               </div>
-               <div ng-show="blankState" class="span12 responsive" data-tablet="span6" data-desktop="span12">
+               <div ng-show="blankStateopportunity" class="span12 responsive" data-tablet="span6" data-desktop="span12">
                 <div class="dashboard-stat cards">
                   
                   
