--- a/templates/live/shows/show.html
+++ b/templates/live/shows/show.html
@@ -395,7 +395,7 @@
                                                   
                                 </div>
                               </div>
-                            <div ng-show="blankState" class="span12 responsive" data-tablet="span6" data-desktop="span12">
+                            <div ng-show="blankStatelead" class="span12 responsive" data-tablet="span6" data-desktop="span12">
                                <div class="dashboard-stat cards">
                   
                   
