fixing accounts,contacts,leads .patch apis #55

--- a/templates/live/shows/show.html
+++ b/templates/live/shows/show.html
@@ -636,6 +636,7 @@
                           
                         </div>
                     </div>
+                   
                     <div class="control-group">
                         <label  class="required control-label">{{_("Youtube Url")}} </label>
                        
@@ -648,7 +649,8 @@
                         <label  class="required control-label">{{_("Tags")}} </label>
                        
                         <div class="controls">
-                          <input type="text"  id="id_tags" >                          
+                          <input type="text" class="span8" ui-select2="select2Options" ng-model="list_of_string"
+    >                         
                         </div>
                     </div>
                     <div class="control-group">
