--- a/static/css/select2.css
+++ b/static/css/select2.css
@@ -1,5 +1,5 @@
 /*
-Version: 3.4.1 Timestamp: Thu Jun 27 18:02:10 PDT 2013
+Version: 3.4.5 Timestamp: Mon Nov  4 08:22:42 PST 2013
 */
 .select2-container {
     margin: 0;
@@ -14,7 +14,7 @@ Version: 3.4.1 Timestamp: Thu Jun 27 18:02:10 PDT 2013
 .select2-container,
 .select2-drop,
 .select2-search,
-.select2-search input{
+.select2-search input {
   /*
     Force border-box so that % widths fit the parent
     container without overlap because of margin/padding.
@@ -22,41 +22,51 @@ Version: 3.4.1 Timestamp: Thu Jun 27 18:02:10 PDT 2013
     More Info : http://www.quirksmode.org/css/box.html
   */
   -webkit-box-sizing: border-box; /* webkit */
-   -khtml-box-sizing: border-box; /* konqueror */
      -moz-box-sizing: border-box; /* firefox */
-      -ms-box-sizing: border-box; /* ie */
           box-sizing: border-box; /* css3 */
 }
 
 .select2-container .select2-choice {
     display: block;
-    height: 30px;
-    padding: 2px 0 0 8px;
+    height: 26px;
+    padding: 0 0 0 8px;
     overflow: hidden;
     position: relative;
 
-    border: 1px solid #e5e5e5;
+    border: 1px solid #aaa;
     white-space: nowrap;
     line-height: 26px;
     color: #444;
     text-decoration: none;
 
-    -webkit-background-clip: padding-box;
-       -moz-background-clip: padding;
-            background-clip: padding-box;
+    border-radius: 4px;
+
+    background-clip: padding-box;
 
     -webkit-touch-callout: none;
       -webkit-user-select: none;
-       -khtml-user-select: none;
          -moz-user-select: none;
           -ms-user-select: none;
               user-select: none;
 
     background-color: #fff;
+    background-image: -webkit-gradient(linear, left bottom, left top, color-stop(0, #eee), color-stop(0.5, #fff));
+    background-image: -webkit-linear-gradient(center bottom, #eee 0%, #fff 50%);
+    background-image: -moz-linear-gradient(center bottom, #eee 0%, #fff 50%);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr = '#ffffff', endColorstr = '#eeeeee', GradientType = 0);
+    background-image: linear-gradient(top, #fff 0%, #eee 50%);
 }
 
 .select2-container.select2-drop-above .select2-choice {
-    border-bottom-color: #e5e5e5;
+    border-bottom-color: #aaa;
+
+    border-radius: 0 0 4px 4px;
+
+    background-image: -webkit-gradient(linear, left bottom, left top, color-stop(0, #eee), color-stop(0.9, #fff));
+    background-image: -webkit-linear-gradient(center bottom, #eee 0%, #fff 90%);
+    background-image: -moz-linear-gradient(center bottom, #eee 0%, #fff 90%);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffff', endColorstr='#eeeeee', GradientType=0);
+    background-image: linear-gradient(top, #eee 0%, #fff 90%);
 }
 
 .select2-container.select2-allowclear .select2-choice .select2-chosen {
@@ -67,10 +77,10 @@ Version: 3.4.1 Timestamp: Thu Jun 27 18:02:10 PDT 2013
     margin-right: 26px;
     display: block;
     overflow: hidden;
+
     white-space: nowrap;
-    -ms-text-overflow: ellipsis;
-     -o-text-overflow: ellipsis;
-        text-overflow: ellipsis;
+
+    text-overflow: ellipsis;
 }
 
 .select2-container .select2-choice abbr {
@@ -80,8 +90,10 @@ Version: 3.4.1 Timestamp: Thu Jun 27 18:02:10 PDT 2013
     position: absolute;
     right: 24px;
     top: 8px;
+
     font-size: 1px;
     text-decoration: none;
+
     border: 0;
     background: url('select2.png') right top no-repeat;
     cursor: pointer;
@@ -97,29 +109,21 @@ Version: 3.4.1 Timestamp: Thu Jun 27 18:02:10 PDT 2013
     cursor: pointer;
 }
 
-.select2-drop-undermask {
-    border: 0;
-    margin: 0;
-    padding: 0;
-    position: absolute;
-    left: 0;
-    top: 0;
-   
-    background-color: transparent;
-    filter: alpha(opacity=0);
-}
-
 .select2-drop-mask {
     border: 0;
     margin: 0;
     padding: 0;
-    position: absolute;
+    position: fixed;
     left: 0;
     top: 0;
-    z-index: 9990;
+    min-height: 100%;
+    min-width: 100%;
+    height: auto;
+    width: auto;
+    opacity: 0;
+    z-index: 9998;
     /* styles required for IE to work */
     background-color: #fff;
-    opacity: 0;
     filter: alpha(opacity=0);
 }
 
@@ -127,17 +131,22 @@ Version: 3.4.1 Timestamp: Thu Jun 27 18:02:10 PDT 2013
     width: 100%;
     margin-top: -1px;
     position: absolute;
-    z-index: 9991;
+    z-index: 9999;
     top: 100%;
 
     background: #fff;
     color: #000;
-    border: 1px solid #e5e5e5;
+    border: 1px solid #aaa;
     border-top: 0;
+
+    border-radius: 0 0 4px 4px;
+
+    -webkit-box-shadow: 0 4px 5px rgba(0, 0, 0, .15);
+            box-shadow: 0 4px 5px rgba(0, 0, 0, .15);
 }
 
 .select2-drop-auto-width {
-    border-top: 1px solid #e5e5e5;
+    border-top: 1px solid #aaa;
     width: auto;
 }
 
@@ -147,17 +156,22 @@ Version: 3.4.1 Timestamp: Thu Jun 27 18:02:10 PDT 2013
 
 .select2-drop.select2-drop-above {
     margin-top: 1px;
-    border-top: 1px solid #e5e5e5;
+    border-top: 1px solid #aaa;
     border-bottom: 0;
+
+    border-radius: 4px 4px 0 0;
+
+    -webkit-box-shadow: 0 -4px 5px rgba(0, 0, 0, .15);
+            box-shadow: 0 -4px 5px rgba(0, 0, 0, .15);
 }
 
 .select2-drop-active {
-    border: 1px solid #999999;
+    border: 1px solid #5897fb;
     border-top: none;
 }
 
 .select2-drop.select2-drop-above.select2-drop-active {
-    border-top: 1px solid #999999;
+    border-top: 1px solid #5897fb;
 }
 
 .select2-container .select2-choice .select2-arrow {
@@ -167,11 +181,18 @@ Version: 3.4.1 Timestamp: Thu Jun 27 18:02:10 PDT 2013
     position: absolute;
     right: 0;
     top: 0;
-    border-left: 1px solid #e5e5e5;
-    -webkit-background-clip: padding-box;
-       -moz-background-clip: padding;
-            background-clip: padding-box;
-    background: transparent;
+
+    border-left: 1px solid #aaa;
+    border-radius: 0 4px 4px 0;
+
+    background-clip: padding-box;
+
+    background: #ccc;
+    background-image: -webkit-gradient(linear, left bottom, left top, color-stop(0, #ccc), color-stop(0.6, #eee));
+    background-image: -webkit-linear-gradient(center bottom, #ccc 0%, #eee 60%);
+    background-image: -moz-linear-gradient(center bottom, #ccc 0%, #eee 60%);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr = '#eeeeee', endColorstr = '#cccccc', GradientType = 0);
+    background-image: linear-gradient(top, #ccc 0%, #eee 60%);
 }
 
 .select2-container .select2-choice .select2-arrow b {
@@ -199,43 +220,25 @@ Version: 3.4.1 Timestamp: Thu Jun 27 18:02:10 PDT 2013
     width: 100%;
     height: auto !important;
     min-height: 26px;
+    padding: 4px 20px 4px 5px;
     margin: 0;
+
     outline: 0;
-    border: 1px solid #e5e5e5;
+    font-family: sans-serif;
+    font-size: 1em;
+
+    border: 1px solid #aaa;
+    border-radius: 0;
+
     -webkit-box-shadow: none;
-       -moz-box-shadow: none;
             box-shadow: none;
+
     background: #fff url('select2.png') no-repeat 100% -22px;
-    webkit-appearance: none !important;   
-    color: #333333;         
-    outline: 0;
-    height: 20px;
-    padding: 6px 6px !important;
-    line-height: 20px;
-    font-size: 14px;
-    font-weight: normal;
-    vertical-align: top;  
-    background-color: #ffffff;
-    filter: none !important;
-    -webkit-box-shadow: none !important;
-       -moz-box-shadow: none !important;
-            box-shadow: none !important;
+    background: url('select2.png') no-repeat 100% -22px, -webkit-gradient(linear, left bottom, left top, color-stop(0.85, #fff), color-stop(0.99, #eee));
+    background: url('select2.png') no-repeat 100% -22px, -webkit-linear-gradient(center bottom, #fff 85%, #eee 99%);
+    background: url('select2.png') no-repeat 100% -22px, -moz-linear-gradient(center bottom, #fff 85%, #eee 99%);
+    background: url('select2.png') no-repeat 100% -22px, linear-gradient(top, #fff 85%, #eee 99%);
 }
-
-.ie8 .select2-search input,
-.ie9 .select2-search input,
-.ie10 .select2-search input {
-    padding-bottom: 8px !important;
-}
-
-.select2-search input:focus {    
-    border-color: #999999;
-    outline: 0 !important;
-    /* IE6-9 */
-    -webkit-box-shadow: none;
-       -moz-box-shadow: none;
-            box-shadow: none; 
-}  
 
 .select2-drop.select2-drop-above .select2-search input {
     margin-top: 4px;
@@ -243,36 +246,47 @@ Version: 3.4.1 Timestamp: Thu Jun 27 18:02:10 PDT 2013
 
 .select2-search input.select2-active {
     background: #fff url('select2-spinner.gif') no-repeat 100%;
+    background: url('select2-spinner.gif') no-repeat 100%, -webkit-gradient(linear, left bottom, left top, color-stop(0.85, #fff), color-stop(0.99, #eee));
+    background: url('select2-spinner.gif') no-repeat 100%, -webkit-linear-gradient(center bottom, #fff 85%, #eee 99%);
+    background: url('select2-spinner.gif') no-repeat 100%, -moz-linear-gradient(center bottom, #fff 85%, #eee 99%);
+    background: url('select2-spinner.gif') no-repeat 100%, linear-gradient(top, #fff 85%, #eee 99%);
 }
 
 .select2-container-active .select2-choice,
 .select2-container-active .select2-choices {
-    border: 1px solid #999999 !important;
+    border: 1px solid #5897fb;
     outline: none;
+
+    -webkit-box-shadow: 0 0 5px rgba(0, 0, 0, .3);
+            box-shadow: 0 0 5px rgba(0, 0, 0, .3);
 }
 
 .select2-dropdown-open .select2-choice {
-    background-color: #fff;
-}
+    border-bottom-color: transparent;
+    -webkit-box-shadow: 0 1px 0 #fff inset;
+            box-shadow: 0 1px 0 #fff inset;
 
-.ie8 .select2-dropdown-open .select2-choice,
-.ie9 .select2-dropdown-open .select2-choice,
-.ie10 .select2-dropdown-open .select2-choice {
-    border-bottom: 0 !important;
-    padding-bottom: 1px; 
-}
+    border-bottom-left-radius: 0;
+    border-bottom-right-radius: 0;
 
-.ie8 .select2-drop-above.select2-dropdown-open .select2-choice,
-.ie9 .select2-drop-above.select2-dropdown-open .select2-choice,
-.ie10 .select2-drop-above.select2-dropdown-open .select2-choice {
-    border-bottom: 1px solid #999999 !important;
-    padding-bottom: 0px; 
+    background-color: #eee;
+    background-image: -webkit-gradient(linear, left bottom, left top, color-stop(0, #fff), color-stop(0.5, #eee));
+    background-image: -webkit-linear-gradient(center bottom, #fff 0%, #eee 50%);
+    background-image: -moz-linear-gradient(center bottom, #fff 0%, #eee 50%);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#eeeeee', endColorstr='#ffffff', GradientType=0);
+    background-image: linear-gradient(top, #fff 0%, #eee 50%);
 }
 
 .select2-dropdown-open.select2-drop-above .select2-choice,
 .select2-dropdown-open.select2-drop-above .select2-choices {
-    border: 1px solid #999999;
+    border: 1px solid #5897fb;
     border-top-color: transparent;
+
+    background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0, #fff), color-stop(0.5, #eee));
+    background-image: -webkit-linear-gradient(center top, #fff 0%, #eee 50%);
+    background-image: -moz-linear-gradient(center top, #fff 0%, #eee 50%);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#eeeeee', endColorstr='#ffffff', GradientType=0);
+    background-image: linear-gradient(bottom, #fff 0%, #eee 50%);
 }
 
 .select2-dropdown-open .select2-choice .select2-arrow {
@@ -292,7 +306,7 @@ Version: 3.4.1 Timestamp: Thu Jun 27 18:02:10 PDT 2013
     position: relative;
     overflow-x: hidden;
     overflow-y: auto;
-    -webkit-tap-highlight-color: rgba(0,0,0,0);
+    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
 .select2-results ul.select2-result-sub {
@@ -327,19 +341,18 @@ Version: 3.4.1 Timestamp: Thu Jun 27 18:02:10 PDT 2013
 
     -webkit-touch-callout: none;
       -webkit-user-select: none;
-       -khtml-user-select: none;
          -moz-user-select: none;
           -ms-user-select: none;
               user-select: none;
 }
 
 .select2-results .select2-highlighted {
-    background: #eee;
-    color: #333;
+    background: #3875d7;
+    color: #fff;
 }
 
 .select2-results li em {
-    background: #eee;
+    background: #feffde;
     font-style: normal;
 }
 
@@ -348,7 +361,7 @@ Version: 3.4.1 Timestamp: Thu Jun 27 18:02:10 PDT 2013
 }
 
 .select2-results .select2-highlighted ul {
-    background: white;
+    background: #fff;
     color: #000;
 }
 
@@ -356,7 +369,7 @@ Version: 3.4.1 Timestamp: Thu Jun 27 18:02:10 PDT 2013
 .select2-results .select2-no-results,
 .select2-results .select2-searching,
 .select2-results .select2-selection-limit {
-    background: #fff;
+    background: #f4f4f4;
     display: list-item;
 }
 
@@ -417,11 +430,15 @@ disabled look for disabled choices in the results dropdown
     padding: 0;
     position: relative;
 
-    border: 1px solid #e5e5e5;
+    border: 1px solid #aaa;
     cursor: text;
     overflow: hidden;
 
     background-color: #fff;
+    background-image: -webkit-gradient(linear, 0% 0%, 0% 100%, color-stop(1%, #eee), color-stop(15%, #fff));
+    background-image: -webkit-linear-gradient(top, #eee 1%, #fff 15%);
+    background-image: -moz-linear-gradient(top, #eee 1%, #fff 15%);
+    background-image: linear-gradient(top, #eee 1%, #fff 15%);
 }
 
 .select2-locked {
@@ -432,10 +449,12 @@ disabled look for disabled choices in the results dropdown
     min-height: 26px;
 }
 
-.select2-container-multi.select2-dropdown-open .select2-choices,
 .select2-container-multi.select2-container-active .select2-choices {
-    border: 1px solid #999999 !important;
+    border: 1px solid #5897fb;
     outline: none;
+
+    -webkit-box-shadow: 0 0 5px rgba(0, 0, 0, .3);
+            box-shadow: 0 0 5px rgba(0, 0, 0, .3);
 }
 .select2-container-multi .select2-choices li {
     float: left;
@@ -450,13 +469,13 @@ disabled look for disabled choices in the results dropdown
 .select2-container-multi .select2-choices .select2-search-field input {
     padding: 5px;
     margin: 1px 0;
+
     font-family: sans-serif;
     font-size: 100%;
     color: #666;
     outline: 0;
     border: 0;
     -webkit-box-shadow: none;
-       -moz-box-shadow: none;
             box-shadow: none;
     background: transparent !important;
 }
@@ -471,32 +490,39 @@ disabled look for disabled choices in the results dropdown
 
 .select2-container-multi .select2-choices .select2-search-choice {
     padding: 3px 5px 3px 18px;
-    margin: 6px 0 3px 5px;
+    margin: 3px 0 3px 5px;
     position: relative;
 
     line-height: 13px;
     color: #333;
     cursor: default;
-    border: 1px solid #e5e5e5;
+    border: 1px solid #aaaaaa;
 
-    -webkit-background-clip: padding-box;
-       -moz-background-clip: padding;
-            background-clip: padding-box;
+    border-radius: 3px;
+
+    -webkit-box-shadow: 0 0 2px #fff inset, 0 1px 0 rgba(0, 0, 0, 0.05);
+            box-shadow: 0 0 2px #fff inset, 0 1px 0 rgba(0, 0, 0, 0.05);
+
+    background-clip: padding-box;
 
     -webkit-touch-callout: none;
       -webkit-user-select: none;
-       -khtml-user-select: none;
          -moz-user-select: none;
           -ms-user-select: none;
               user-select: none;
 
-    background-color: #ffffff;
+    background-color: #e4e4e4;
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#eeeeee', endColorstr='#f4f4f4', GradientType=0);
+    background-image: -webkit-gradient(linear, 0% 0%, 0% 100%, color-stop(20%, #f4f4f4), color-stop(50%, #f0f0f0), color-stop(52%, #e8e8e8), color-stop(100%, #eee));
+    background-image: -webkit-linear-gradient(top, #f4f4f4 20%, #f0f0f0 50%, #e8e8e8 52%, #eee 100%);
+    background-image: -moz-linear-gradient(top, #f4f4f4 20%, #f0f0f0 50%, #e8e8e8 52%, #eee 100%);
+    background-image: linear-gradient(top, #f4f4f4 20%, #f0f0f0 50%, #e8e8e8 52%, #eee 100%);
 }
 .select2-container-multi .select2-choices .select2-search-choice .select2-chosen {
     cursor: default;
 }
 .select2-container-multi .select2-choices .select2-search-choice-focus {
-    background: #ffffff;
+    background: #d4d4d4;
 }
 
 .select2-search-choice-close {
@@ -505,7 +531,8 @@ disabled look for disabled choices in the results dropdown
     height: 13px;
     position: absolute;
     right: 3px;
-    top: 3px;
+    top: 4px;
+
     font-size: 1px;
     outline: none;
     background: url('select2.png') right top no-repeat;
@@ -523,8 +550,8 @@ disabled look for disabled choices in the results dropdown
 }
 
 /* disabled styles */
-.select2-container-multi.select2-container-disabled .select2-choices{
-    background-color: #ffffff;
+.select2-container-multi.select2-container-disabled .select2-choices {
+    background-color: #f4f4f4;
     background-image: none;
     border: 1px solid #ddd;
     cursor: default;
@@ -538,7 +565,7 @@ disabled look for disabled choices in the results dropdown
 }
 
 .select2-container-multi.select2-container-disabled .select2-choices .select2-search-choice .select2-search-choice-close {    display: none;
-    background:none;
+    background: none;
 }
 /* end multiselect */
 
@@ -549,16 +576,17 @@ disabled look for disabled choices in the results dropdown
 }
 
 .select2-offscreen, .select2-offscreen:focus {
-    clip: rect(0 0 0 0);
-    width: 1px;
-    height: 1px;
-    border: 0;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    position: absolute;
-    outline: 0;
-    left: 0px;
+    clip: rect(0 0 0 0) !important;
+    width: 1px !important;
+    height: 1px !important;
+    border: 0 !important;
+    margin: 0 !important;
+    padding: 0 !important;
+    overflow: hidden !important;
+    position: absolute !important;
+    outline: 0 !important;
+    left: 0px !important;
+    top: 0px !important;
 }
 
 .select2-display-none {
@@ -574,19 +602,6 @@ disabled look for disabled choices in the results dropdown
     overflow: scroll;
 }
 /* Retina-ize icons */
-
-/* Fix z-index when select2 opened in modals*/
-.modal-open .select2-drop-mask {
-    z-index: 10101;
-}
-
-.modal-open .select2-drop {
-    z-index: 10102;
-}
- 
-.modal-open .select2-search {
-    z-index: 10102;
-}
 
 @media only screen and (-webkit-min-device-pixel-ratio: 1.5), only screen and (min-resolution: 144dpi)  {
   .select2-search input, .select2-search-choice-close, .select2-container .select2-choice abbr, .select2-container .select2-choice .select2-arrow b {
