--- a/templates/base.html
+++ b/templates/base.html
@@ -19,6 +19,7 @@
   <link href="static/css/themes/light.css"  rel="stylesheet" type="text/css" id="style_color"/>
   <link href="static/plugins/uniform/css/uniform.default.css"  rel="stylesheet" type="text/css"/>
   <link href="static/plugins/bootstrap-switch/static/stylesheets/bootstrap-switch-metro.css" rel="stylesheet" type="text/css"/>
+  <link rel="stylesheet" type="text/css" href="static/plugins/select2/select2_metro.css" />
   <link rel="stylesheet" href="static/css/datetimepicker.css"/>
 
   <!-- END GLOBAL MANDATORY STYLES -->
@@ -189,8 +190,9 @@
   <!-- BEGIN CORE PLUGINS -->   
 
   <script src="static/plugins/jquery-2.0.3.min.js"  type="text/javascript"></script>
-
+  <script src="static/app/scripts/vendor/select2.min.js" ></script>
    <script src="static/app/scripts/vendor/angular.js" ></script>
+   <script src="static/app/scripts/vendor/ui-select2.js" ></script>
   <script type="text/javascript">
     window.is_signed_in = false;
     function auth() {
