Comment  Next, Prev page on event, note and task

--- a/templates/activities/event_show.html
+++ b/templates/activities/event_show.html
@@ -105,11 +105,11 @@
                                 <div class="pagination pull-right" ng-hide="isLoading">
                                       
                                       <ul>
-                                        <li ng-show="pagination.prev"><button ng-click="listPrevPageItems()" id="sample_editable_1_new" class="btn">
+                                        <li ng-show="paginationcomment.prev"><button ng-click="listPrevPageItemscomment()" id="sample_editable_1_new" class="btn">
                                         {{_("Prev")}} 
                                         </button></li>
                                         
-                                        <li  ng-show="pagination.next"><button ng-click="listNextPageItems()"  class="btn">
+                                        <li  ng-show="paginationcomment.next"><button ng-click="listNextPageItemscomment()"  class="btn">
                                         {{_("Next")}} 
                                         </button></li>
                                       </ul>
