--- a/templates/live/feedbacks/feedbacks_list.html
+++ b/templates/live/feedbacks/feedbacks_list.html
@@ -36,6 +36,96 @@
               </span>
         </div>
       </div>
+        <div id="addFeedModal" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+              <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+                <h3 id="myModalLabel">{{_("New Feedback")}}</h3>
+              </div>
+              <div class="modal-body">
+                 <form id="addFeedback" name="addfeedback"  class="form-horizontal"  ng-keyup="addFeedbackOnKey(feedback)"> 
+                  <fieldset>
+                    <div class="control-group">
+                        <label  class="required control-label">{{_("Title")}} *</label>
+                       
+                        <div class="controls">
+                          <input type="text" required  ng-model="feedback.name">
+                          
+                        </div>
+                    </div>
+                    <div class="control-group">
+                        <label  class="required control-label">{{_("Content")}} *</label>
+                       
+                        <div class="controls">
+                          <textarea required  ng-model="feedback.content" rows="3">
+                          </textarea>
+                        </div>
+                    </div>
+                    <div class="control-group">
+                        <label  class="control-label">{{_("Type")}}</label>
+                       
+                        <div class="controls">
+                          <select ng-model="feedback.type_feedback">
+                            <option value="1">Questions Q/A</option>
+                            <option value="2">Features Request</option>
+                            <option value="3">Others</option>
+                           </select>
+                          
+                        </div>
+                    </div>
+                    <div class="control-group">
+                        <label  class=" control-label">{{_("Source")}}</label>
+                       
+                        <div class="controls">
+                          <select  ng-model="feedback.source">
+                            <option value="4">Email</option>
+                            <option value="5" >i/oGrow Live</option>
+                            <option value="6">Phone</option>
+                            <option value="7">Others</option>
+                           </select>
+                          
+                        </div>
+                    </div>
+                    <div class="control-group">
+                        <label  class=" control-label">{{_("Status")}}</label>
+                       
+                        <div class="controls">
+                          <select ng-model="feedback.status">
+                            <option value="8">Pending</option>
+                            <option value="9">Working</option>
+                            <option value="10">Rejected</option>
+                          </select>
+                          
+                        </div>
+                    </div>
+                    <hr/>
+                    <p> {{ _('Who can access?') }}</p>
+                     <div class='container-fluid'>
+
+                     
+                          
+                            <label class="radio line">
+                            <input type="radio" value="public" ng-model="feedback.access" />
+                             {{ _('public: Anyone within your organization') }}
+                            </label>
+                            <label class="radio line">
+                            <input type="radio"  value="private" ng-model="feedback.access" />
+                            {{ _('private: only you and your collaborators') }}
+                            </label>  
+                           
+                       
+                      
+                    </div>
+                    </fieldset>
+                
+              </div>
+              <div class="modal-footer">
+                <button class="btn" data-dismiss="modal" aria-hidden="true">{{_("Cancel")}}</button>
+                
+                <input ng-hide="isLoading" ng-click="savefeedback(feedback)" type="submit" class="btn green" value="{{ _('Add this Feedback') }}">
+                <input ng-show="isLoading" type="submit" class="btn green" value="{{ _('Loading...') }}" disabled>
+              </div>
+               </form>
+       </div>
          
       <div class="container-fluid" ng-show="isSignedIn">
         
@@ -48,7 +138,7 @@
             
             <div class="btn-group">
             
-                    <button  ng-click="showModal()" id="sample_editable_1_new" class="btn red">
+                    <button  ng-click="showFeedbackModal()" id="sample_editable_1_new" class="btn red">
                     {{ _("Add new Feedback") }} <i class="icon-plus"></i>
                     </button>
             </div>
@@ -66,7 +156,7 @@
                 <div class="dashboard-stat cards cards-show">
                   
                   <div class="details">
-                    <a href="/#/feedbacks/feedback/<%= feedback.id %>"><h3 class="relatedcardOppTitle">
+                    <a href="/#/live/feedbacks/feedback/<%= feedback.id %>"><h3 class="relatedcardOppTitle">
                                     <%= feedback.name%>
                                     </h3></a>
                     <div class="desc">                           
@@ -83,7 +173,7 @@
                   
                   <div class="blank_slate_arrow"></div>
                   <div class="blank_slate_body">
-                      <img src="/static/img/accounts_blank.png">
+                      <img src="/static/img/customer-feedback.jpg" width="300">
                       <p class="lead">{{ _('Feedbacks pages  let you receive a feedback from leads or customers ') }}</p>
                   </div>
                
