--- a/templates/base.html
+++ b/templates/base.html
@@ -21,6 +21,8 @@
   <link href="static/plugins/bootstrap-switch/static/stylesheets/bootstrap-switch-metro.css" rel="stylesheet" type="text/css"/>
   <link rel="stylesheet" type="text/css" href="static/plugins/select2/select2_metro.css" />
   <link rel="stylesheet" href="static/css/datetimepicker.css"/>
+  <link rel="stylesheet" href="static/css/bootstrap-wysihtml5.css"/>
+  
 
   <!-- END GLOBAL MANDATORY STYLES -->
   <link rel="shortcut icon" href="favicon.ico" />
@@ -236,11 +238,11 @@
 
 
 
-    var ROOT = '/_ah/api';
+    //var ROOT = '/_ah/api';
 
    
 
-    //var ROOT = 'https://gcdc2013-iogrow.appspot.com/_ah/api';
+    var ROOT = 'https://gcdc2013-iogrow.appspot.com/_ah/api';
 
 
 
@@ -366,6 +368,8 @@
   <script src="static/plugins/uniform/jquery.uniform.min.js" type="text/javascript" ></script>
   <script src="static/plugins/bootstrap-switch/static/js/bootstrap-switch.js" type="text/javascript" ></script>
   
+  <script src="static/app/scripts/vendor/wysihtml5-0.3.0.min.js" ></script>
+  <script src="static/app/scripts/vendor/bootstrap-wysihtml5.js" ></script>
 
   <!-- END CORE PLUGINS -->
   
