Retrive send Email

--- a/templates/live/feedbacks/feedbacks_list.html
+++ b/templates/live/feedbacks/feedbacks_list.html
@@ -65,9 +65,9 @@
                        
                         <div class="controls">
                           <select ng-model="feedback.type_feedback">
-                            <option value="1">Questions Q/A</option>
-                            <option value="2">Features Request</option>
-                            <option value="3">Others</option>
+                            <option value="Questions Q/A">Questions Q/A</option>
+                            <option value="Features Request">Features Request</option>
+                            <option value="Others">Others</option>
                            </select>
                           
                         </div>
@@ -77,10 +77,10 @@
                        
                         <div class="controls">
                           <select  ng-model="feedback.source">
-                            <option value="4">Email</option>
-                            <option value="5" >i/oGrow Live</option>
-                            <option value="6">Phone</option>
-                            <option value="7">Others</option>
+                            <option value="Email">Email</option>
+                            <option value="i/oGrow Live" >i/oGrow Live</option>
+                            <option value="Phone">Phone</option>
+                            <option value="Others">Others</option>
                            </select>
                           
                         </div>
@@ -90,9 +90,9 @@
                        
                         <div class="controls">
                           <select ng-model="feedback.status">
-                            <option value="8">Pending</option>
-                            <option value="9">Working</option>
-                            <option value="10">Rejected</option>
+                            <option value="Pending">Pending</option>
+                            <option value="Working">Working</option>
+                            <option value="Rejected">Rejected</option>
                           </select>
                           
                         </div>
